--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
       "aurelia-http-client": "github:aurelia/http-client@^0.5.5",
       "aurelia-router": "github:aurelia/router@^0.5.8",
       "bootstrap": "github:twbs/bootstrap@^3.3.1",
-      "font-awesome": "npm:font-awesome@^4.3.0"
+      "font-awesome": "npm:font-awesome@^4.3.0",
+      "lodash": "npm:lodash@^3.5.0"
     }
   }
 }
